# django_tictactoe

./: .gitignore  README.md  play.py  pyproject.toml  requirements.txt  requisitos.md
.github/workflows/: django-ci.yaml
game/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
game/migrations/: 0001_initial.py
scripts/: start.sh
tictactoe/: settings.py  tests.py  urls.py
